<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F51B5"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ShowData">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/wand"
        android:contentDescription="@string/wand"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/show_name_tag"
            android:padding="10dp"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/show_id_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/show_name"
            android:padding="10dp"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/show_lastname_tag"
            android:padding="10dp"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/show_id_lastname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/show_lastname"
            android:padding="10dp"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/show_age_tag"
            android:padding="10dp"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/show_id_age"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/show_age"
            android:padding="10dp"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <ImageButton
        android:id="@+id/show_id_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/baseline_navigate_before_white_18dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/back"/>

</LinearLayout>